--- a/style.css
+++ b/style.css
@@ -38,6 +38,11 @@ main {
     text-align: center; 
 } 
 
+.gif {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    
 footer { 
   background-color: #333; 
   color: white; 
