--- a/style.css
+++ b/style.css
@@ -53,4 +53,13 @@ footer {
   padding: 10px 0;
   bottom: 0; 
 }
-  
+
+.social-media a{
+    display: inline-block;
+    margin: 0 10px;
+}
+
+.social-media img{
+    width: 40px;
+    height: auto;
+}
