--- a/style.css
+++ b/style.css
@@ -54,4 +54,16 @@ footer {
   bottom: 0; 
 }
 
+.gallery .gift { 
+    display: inline-block;
+    margin: 20px;
+    text-align: center;
+}
+
+.gallery .gift img {
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+}
+  
 
