--- a/style.css
+++ b/style.css
@@ -45,13 +45,13 @@ main {
 }
     
 footer { 
-  background-color: #333; 
-  color: white; 
-  text-align: center; 
-  position: fixed; 
-  width: 100%; 
-  padding: 10px 0;
-  bottom: 0; 
+    background-color: #333; 
+    color: white; 
+    text-align: center; 
+    position: fixed; 
+    width: 100%; 
+    padding: 10px 0;
+    bottom: 0; 
 }
 
 .gallery .gift { 
@@ -65,5 +65,32 @@ footer {
     height: 200px;
     object-fit: cover;
 }
-  
 
+.form form {  
+    max-width: 400px; 
+    margin: 0 auto; 
+    text-align: left; 
+} 
+
+.form label { 
+    display: block; 
+    margin: 10px 0 5px; 
+} 
+
+.form input, .form select { 
+    width: 100%; 
+    padding: 8px; 
+    margin-bottom: 10px; 
+}  
+
+footer { 
+    background-color: #333; 
+    color: white; 
+    text-align: center; 
+    padding: 10px 0; 
+    position: fixed; 
+    width: 100%; 
+    bottom: 0; 
+}
+
+  
