--- a/style.css
+++ b/style.css
@@ -35,7 +35,13 @@ nav ul li a:hover {
 main { 
     justify-content: center;
     text-align: center; 
+    padding: 20px;
 } 
+
+h1 {
+    font-size: 1.5em;
+    margin: 20px 0;
+}
 
 .gif {
     width: 100%;
