--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ header {
     color: white; 
     width: 100vw;
     position: fixed;
-    padding: 1em 0;
+    padding: 0;
     top: 0;
     z-index: 1000;
     box-sizing: border-box
