--- a/style.css
+++ b/style.css
@@ -9,13 +9,17 @@ header {
     background-color: #333; 
     text-align: center; 
     color: white; 
-    width: 100vw;
+    width: 100%;
     position: fixed;
-    padding: 0;
+    padding: 1em 0;
     top: 0;
     z-index: 1000;
     box-sizing: border-box
 } 
+
+nav{
+    width: 100%
+}
 
 nav ul { 
     list-style: none; 
@@ -24,11 +28,12 @@ nav ul {
 } 
 
 nav ul li { 
-  display: inline; 
-  margin: 0 10px; 
+  display: inline-block; 
+  margin: 0; 
 } 
 
 nav ul li a { 
+    display: block;
     color: white; 
     text-decoration: none; 
 } 
