--- a/style.css
+++ b/style.css
@@ -28,12 +28,11 @@ nav ul {
 } 
 
 nav ul li { 
-  display: inline-block; 
-  margin: 0; 
+  display: inline; 
+  margin: 0 10px; 
 } 
 
 nav ul li a { 
-    display: block;
     color: white; 
     text-decoration: none; 
 } 
@@ -50,11 +49,6 @@ main {
     box-sizing: border-box;
     min-height: calc(100vh-120px);
 } 
-
-h1 {
-    font-size: 1.5em;
-    margin: 20px 0;
-}
 
 .gif {
     width: 100%;
