--- a/style.css
+++ b/style.css
@@ -44,8 +44,7 @@ main {
     justify-content: center;
     text-align: center; 
     padding: 20px;
-    padding-top: 80px;
-    padding-bottom: 40px;
+    overflow-y: scroll; 
     box-sizing: border-box;
     min-height: calc(100vh-120px);
 } 
