--- a/style.css
+++ b/style.css
@@ -11,8 +11,7 @@ header {
     color: white; 
     width: 100%;
     position: fixed;
-    padding: 1em 0;
-    top: 0;
+    padding: 0;
     z-index: 1000;
     box-sizing: border-box
 } 
