--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ footer {
     background-color: #333; 
     color: white; 
     text-align: center; 
-    padding: 5px 0; 
+    padding: 0; 
     position: fixed; 
     width: 100%; 
     bottom: 0; 
