--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ main {
     justify-content: center;
     text-align: center; 
     padding: 20px;
+    padding top: 70px;
     overflow-y: scroll; 
     box-sizing: border-box;
     min-height: calc(100vh-120px);
@@ -87,7 +88,7 @@ footer {
     background-color: #333; 
     color: white; 
     text-align: center; 
-    padding: 0; 
+    padding: 3px 0; 
     position: fixed; 
     width: 100%; 
     bottom: 0; 
