--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ header {
     text-align: center; 
     color: white; 
     width: 100%;
+    height: 60%;
     position: fixed;
     padding: 0;
     z-index: 1000;
