--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ header {
     width: 100%;
     height: 55%;
     position: fixed;
-    padding: 0;
+    padding: 1em 0;
     z-index: 1000;
     box-sizing: border-box
 } 
@@ -89,7 +89,7 @@ footer {
     background-color: #333; 
     color: white; 
     text-align: center; 
-    padding: 3px 0; 
+    padding: 1px 0; 
     position: fixed; 
     width: 100%; 
     height: 85%;
