--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ header {
     position: fixed;
     padding: 1em 0;
     z-index: 1000;
-    box-sizing: border-box
+    box-sizing: border-box;
 } 
 
 nav{
