--- a/style.css
+++ b/style.css
@@ -6,15 +6,14 @@ body {
 } 
 
 header { 
-    background-color: #333; 
-    text-align: center; 
-    color: white; 
-    width: 100%;
-    height: 55%;
-    position: fixed;
-    padding: 1em 0;
-    z-index: 1000;
-    box-sizing: border-box;
+  background-color: #333; 
+  text-align: center; 
+  color: white; 
+  width: 100%;
+  position: fixed;
+  padding: 1em 0;
+  z-index: 1000;
+  box-sizing: border-box;
 } 
 
 nav{
@@ -89,10 +88,9 @@ footer {
     background-color: #333; 
     color: white; 
     text-align: center; 
-    padding: 1px 0; 
+    padding: 0; 
     position: fixed; 
     width: 100%; 
-    height: 85%;
     bottom: 0; 
 }
 
